--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
             <version>7.9.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>Facebook-Automation</groupId>
+        	<artifactId>Facebook-Automation</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
