--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
             <version>7.9.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- JUnit 4 -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13.2</version>
+    <scope>test</scope>
+</dependency>
+
 
     </dependencies>
 
