--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,20 @@
             <scope>test</scope>
         </dependency>
         <!-- JUnit 4 -->
+        
+        <!-- Log4j 2 -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.22.1</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.22.1</version>
+</dependency>
+
 <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
